adiciona opcao de definir tempo limite por token

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 REDIS_HOST=localhost
 REDIS_PORT=6379
-RATE_LIMITER_IP_LIMIT=5
-RATE_LIMITER_BLOCK_TIME=60
+RATE_LIMITER_LIMIT=5
+RATE_LIMITER_IP_BLOCK_TIME=60
